--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,63 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      .app-loading {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #121212;
+        z-index: 9999;
+        transition: opacity 0.5s ease-out;
+      }
+      .app-loading.loaded {
+        opacity: 0;
+        pointer-events: none;
+      }
+      .app-loading-logo {
+        width: 120px;
+        height: 120px;
+        animation: pulse 1.5s infinite ease-in-out;
+      }
+      .app-loading-text {
+        margin-top: 20px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: white;
+        font-size: 18px;
+        text-align: center;
+      }
+      @keyframes pulse {
+        0% {
+          transform: scale(0.95);
+          opacity: 0.7;
+        }
+        50% {
+          transform: scale(1.05);
+          opacity: 1;
+        }
+        100% {
+          transform: scale(0.95);
+          opacity: 0.7;
+        }
+      }
+    </style>
     <title>Inventar Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+    <!-- Ladeanimation -->
+    <div id="app-loading" class="app-loading">
+      <img src="%PUBLIC_URL%/logo192.png" alt="Loading" class="app-loading-logo" />
+      <div class="app-loading-text">Inventar Management wird geladen...</div>
+    </div>
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +92,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      // Entferne die Ladeanimation, wenn die App geladen ist
+      window.onload = function() {
+        setTimeout(function() {
+          var loader = document.getElementById('app-loading');
+          if (loader) {
+            loader.classList.add('loaded');
+            setTimeout(function() {
+              if (loader.parentNode) {
+                loader.parentNode.removeChild(loader);
+              }
+            }, 500);
+          }
+        }, 1000); // Kurze Verzögerung, damit die Animation auch bei schnellem Laden sichtbar ist
+      };
+    </script>
   </body>
 </html>
